Member home, profile dashboard & steops of creating ads updates

--- a/web/html_components/member/home/index.html
+++ b/web/html_components/member/home/index.html
@@ -12,11 +12,9 @@
                     <div class="row form-group">
                         <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8 form-group">
                             <div class="home-page-search-box-layout">
-                                <input 
-                                    class="form-control search-input-field">
-<!--                                    #locationSelector name="locationSelector" [(ngModel)]="selectedLocation"
+                                <input class="form-control search-input-field" #locationSelector name="locationSelector" [(ngModel)]="selectedLocation"
                                     [typeahead]="locationList"
-                                    typeaheadOptionField="searchString"-->
+                                    typeaheadOptionField="searchString" />
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 form-group">
