--- a/web/html_components/member/profile/index.html
+++ b/web/html_components/member/profile/index.html
@@ -29,7 +29,7 @@
                             <h5>User:</h5>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                            {{user.firstName}} {{user.lastName}}
+                            <p>{{user.firstName}} {{user.lastName}}</p>
                         </div>
                     </div>
                     <div class="row">
@@ -37,7 +37,7 @@
                             <h5>Email:</h5>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                            {{user.email}}
+                            <p>{{user.email}}</p>
                         </div>
                     </div>
                     <div class="row">
@@ -45,7 +45,16 @@
                             <h5>Cell:</h5>
                         </div>
                         <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
-                            {{user.cellNo}}
+                            <p>{{user.cellNo}}</p>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                            <h5>Profile Verification</h5>
+                        </div>
+                        <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                            <p class="fa-success"><i class="fa fa-check" aria-hidden="true"></i></p>
+                            <!--<p class="fa-disable"><i class="fa fa-times" aria-hidden="true"></i> </p>-->
                         </div>
                     </div>
                 </div>
