--- a/web/html_components/member/profile/index.html
+++ b/web/html_components/member/profile/index.html
@@ -1,9 +1,9 @@
 <div class="row">
     <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
         <ul class="profile-left-sidebar-ul">
-            <li><a class="active">Edit Profile</a></li>
-            <li><a>Upload Profile Picture</a></li>
-            <li><a>Profile Verification</a></li>
+            <li><a class="active" [routerLink]="['/editprofile']" (click)="editprofile($event)">Edit Profile</a></li>
+            <li><a [routerLink]="['/uploadimg']" (click)="uploadimg($event)">Upload Profile Picture</a></li>
+            <li><a [routerLink]="['/uploaddocument']" (click)="uploaddocument($event)">Profile Verification</a></li>
         </ul>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
