--- a/web/html_components/member/messages.html
+++ b/web/html_components/member/messages.html
@@ -1,41 +1,55 @@
 <div class="row">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <div class="message-inbox-header-layout">
-            <h3 class="message-inbox-header-title">Inbox</h3>
-        </div>
+    <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+        <ul class="dashboard-left-sidebar-ul">
+            <li><a class="active" href="manage-product.jsp">Add Advert</a></li>
+            <li><a [routerLink]="['/myads']" (click)="myads($event)">My Ads</a></li>
+            <li><a [routerLink]="['/savedads']" (click)="savedads($event)">Saved Ads</a></li>
+            <li><a [routerLink]="['/messages']" (click)="messages($event)">Messages</a></li>
+        </ul>
     </div>
-</div>
-<div class="row form-group">
-    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-        <div class="message-inbox-content-layout" *ngFor="let message of inbox">
-             <div class="row form-group">
-                <div class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
-                    <input id="message-inbox-message-id-{{message.id}}" type="checkbox" class="checkbox"> <img class="img-responsive message-inbox-user-image"  src="resources/images/member_icon.png">
+    <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="message-inbox-header-layout">
+                    <h3 class="message-inbox-header-title">Inbox</h3>
                 </div>
-                <div class="col-xs-7 col-sm-8 col-md-9 col-lg-9">
-                    <div class="row form-group">
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                            <h3 class="message-inbox-sender-name">{{message.to.firstName}} {{message.to.lastName}}</h3>
+            </div>
+        </div>
+        <div class="row form-group">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="message-inbox-content-layout" *ngFor="let message of inbox">
+                     <div class="row form-group">
+                        <div class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
+                            <input id="message-inbox-message-id-{{message.id}}" type="checkbox" class="checkbox"> <img class="img-responsive message-inbox-user-image"  src="resources/images/member_icon.png">
+                        </div>
+                        <div class="col-xs-7 col-sm-8 col-md-9 col-lg-9">
+                            <div class="row form-group">
+                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                    <h3 class="message-inbox-sender-name">{{message.to.firstName}} {{message.to.lastName}}</h3>
+                                </div>
+                            </div>
+                            <div class="row form-group">
+                                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                    <a><h4 class="message-inbox-message-subject">{{message.subject}}</h4></a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
+                            <div class="message-inbox-mesage-delete-icon"><i class="fa fa-times" aria-hidden="true"></i></div>
                         </div>
                     </div>
-                    <div class="row form-group">
-                        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
-                            <a><h4 class="message-inbox-message-subject">{{message.subject}}</h4></a>
-                        </div>
-                    </div>
                 </div>
-                <div class="col-xs-1 col-sm-1 col-md-1 col-lg-1">
-                    <div class="message-inbox-mesage-delete-icon"><i class="fa fa-times" aria-hidden="true"></i></div>
-                </div>
+            </div>
+        </div>
+        <div class="row form-group">
+            <div class="col-xs-6 col-sm-5 col-md-3 col-lg-3">
+                <button class="form-control common-custom-button">Delete Selected</button>
             </div>
         </div>
     </div>
 </div>
-<div class="row form-group">
-    <div class="col-xs-6 col-sm-5 col-md-3 col-lg-3">
-        <button class="form-control common-custom-button">Delete Selected</button>
-    </div>
-</div>
+
+
 <!--
 Message Panel
 
