--- a/web/html_components/member/profile/editprofile.html
+++ b/web/html_components/member/profile/editprofile.html
@@ -7,11 +7,54 @@
         </ul>
     </div>
     <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
-        Edit Profile Info here
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-offset-2 col-md-8 col-lg-offset-2 col-lg-8">
+                <div class="row form-group">
+                    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                        <h3 class="text-center">Edit Your Profile</h3>
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                        <h5 class="edit-profile-label">First Name</h5>
+                    </div>
+                    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                        <input class="form-control input-custom-field" name="firstName" value="{{user.firstName}}" placeholder="First Name" type="text" />
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                        <h5 class="edit-profile-label">Last Name</h5>
+                    </div>
+                    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                        <input class="form-control input-custom-field" name="lastName" value="{{user.lastName}}" placeholder="Last Name" type="text" />
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                        <h5 class="create-ad-label">Email</h5>
+                    </div>
+                    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                        <input class="form-control input-custom-field" name="email" value="{{user.email}}" placeholder="Email" type="text"/>
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-xs-12 col-sm-4 col-md-4 col-lg-4">
+                        <h5 class="create-ad-label">Cell No.</h5>
+                    </div>
+                    <div class="col-xs-12 col-sm-8 col-md-8 col-lg-8">
+                        <input class="form-control input-custom-field" name="cellNo" value="{{user.cellNo}}" placeholder="Cell No." type="text"/>
+                    </div>
+                </div>
+                <div class="row form-group">
+                    <div class="col-xs-12 col-sm-offset-8 col-sm-4  col-md-offset-8 col-md-4  col-lg-offset-8 col-lg-4">
+                        <button id="user-profile-edit-button" class="form-control common-custom-button">Submit</button>
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
-
-
 
 <!--    This is your profile
 
