--- a/web/html_components/member/featuredad/stats.html
+++ b/web/html_components/member/featuredad/stats.html
@@ -33,7 +33,10 @@
                             <h5>From</h5>
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6">
-                            <input class="form-control input-custom-field" type="text" id="datepicker">
+                            <input class="form-control input-custom-field" type="text" [ngModel]="fromDate" (focus)="showDatePicker = true" (focusout)="showDatePicker = false" >
+                            <div *ngIf="showDatePicker" style="position: absolute; z-index:10; min-height:290px;">
+                                <datepicker [(ngModel)]="fromDate" [minDate]="minDate" [showWeeks]="false"></datepicker>
+                            </div>
                         </div>
                     </div>
                     <div class="row">
